deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubbis
  labels:
    app: rkubbis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubbis
  template:
    metadata:
      labels:
        app: kubbis
    spec:
      containers:
      - name: kubbis
        image: node:12-alpine
        ports:
        - containerPort: 80
