service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubbis-service
  namespace: apps
spec:
  selector:
    app.kubernetes.io/name: kubbis
  ports:
  - name: kubbis-http
    protocol: TCP
    port: 80
    targetPort: http-web-svc
