ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: app.ostepopp.site
    http:
    paths:
    - path: /kubbis
      pathType: Prefix
      backend:
        service:
          name: kubbis-service
          port:
            number: 80
